# fractal_attention_analysis

./: .gitignore  CHANGELOG.md  CI_CD_COMPLETE_SUMMARY.md  CONTRIBUTING.md  FIRST_PYPI_RELEASE_GUIDE.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: SETUP_INSTRUCTIONS.md
examples/: advanced_analysis.py  basic_usage.py
src/fractal_attention_analysis/: __init__.py  cli.py  core.py  fractal.py  metrics.py  utils.py  visualization.py
tests/: __init__.py  test_fractal.py  test_metrics.py
